# BC4

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py  models.py
src/app/: config.py  database.py  main.py  models.py
src/app/tests/: test_main.py
src/tests/: test_main.py
