[tool.poetry]
name = "bc4"
version = "0.1.0"
description = "Code Challenge"
authors = ["Spadavecchia Adrian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.19"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
